<resources>
    <string name="app_name">Timer</string>
    <string name="title">Timer</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="minute">Minute</string>
    <string name="seconds">Seconds</string>
    <string name="second">Second</string>
    <string name="runningForText">Running for %d %s, %d %s, %d %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="timerPaused">Timer is paused.</string>
    <string name="timerResumed">Timer resumed.</string>
    <string name="timerStopped">Timer stopped.</string>
    <string name="timerFinished">Timer finished.</string>
    <string name="allZeroes">Tell me for how long I\'ll be running first.</string>
    <string name="noNeedToPause">No need to pause.</string>
    <string name="message">Timer will end at</string>
    <string name="format">Remaining time: %s:%s:%s</string>
    <string name="notificationsNotAllowed">Permissions not given to show notifications.</string>
    <string name="permissionDenied">To get a better experience, it\'s recommended to allow notifications.</string>
    <string name="permissionAsked" translatable="false">NotificationPermission</string>
    <string name="empty" translatable="false"> </string>
    <string name="action" translatable="false">Action</string>
    <string name="noAction" translatable="false">NoAction</string>
    <string name="preferences" translatable="false">com.github.brookiestein.timer.preferences</string>
    <string name="stopTimerAction" translatable="false">com.github.brookiestein.timer.stopTimer</string>
    <string name="pauseTimerAction" translatable="false">com.github.brookiestein.timer.pauseTimer</string>
    <string name="resumeTimerAction" translatable="false">com.github.brookiestein.timer.resumeTimer</string>
    <string name="stopSoundAction" translatable="false">com.github.brookiestein.timer.stopSound</string>
    <string name="stopVibrationAction" translatable="false">com.github.brookiestein.timer.stopVibration</string>
    <string name="stopRingtone">Stop Ringtone</string>
    <string name="stopVibration">Stop Vibration</string>
    <string name="whenTimerFinishesHeader">When timer finishes</string>
    <string name="settingsOption">Settings</string>
    <string name="playSound">Play sound</string>
    <string name="playSoundTime">Play sound for (in minutes)</string>
    <string name="playSoundPreference" translatable="false">PlaySound</string>
    <string name="playSoundForPreference" translatable="false">PlaySoundFor</string>
    <string name="vibratePreference" translatable="false">Vibrate</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrateTime">Vibrate for (in minutes)</string>
    <string name="vibrateTimePreference" translatable="false">VibrateTime</string>
</resources>