<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/settingsOption"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:titleTextColor="#FFFFFF" />

        <TextView
            android:id="@+id/whenTimerFinishesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whenTimerFinishesHeader"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/playSoundSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playSound"
            android:textAlignment="viewStart" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playSoundTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/playSoundTime"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/playSoundForEdit"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/vibrateSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibrate" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>